--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,32 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+  --font-color: #00CC14;
+  --accent-color: #00CC14;
+  --background-color: #000;
+  --background-image: repeating-linear-gradient(to right, #000 0 2px, transparent 2px 4px),
+  repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+  repeating-linear-gradient(to bottom, #007f0c 0.01%, #004306 100%);
+}
+
+:root.theme-light {
+  --font-color: #000;
+  --accent-color: #000;
+  --background-color: #fff;
+  --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+  repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+  repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --font-color: #000;
+    --accent-color: #000;
+    --background-color: #fff;
+    --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+  }
+}
