--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,144 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+/* Стрелочка */
+
+.theme-menu__item:has(.theme-menu__button:disabled)::before {
+  animation: arrow-movement 0.5s ease-in-out infinite alternate;
+}
+
+/* Фокус на меню */
+
+.theme-menu__button:focus-visible {
+  animation: text-underline-disabled 0.5s linear;
+}
+
+/* Кнопка Like */
+
+.card__like-button:focus-visible {
+  transition: box-shadow 0.5s ease-in-out;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  width: 0;
+  height: 100%;
+  transition: width 0.5s ease-in;
+}
+
+.button:hover::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  background: var(--accent-color);
+  transition: width 0.5s ease-in;
+}
+
+/* Сердечко */
+
+.card__icon-button:focus-visible {
+  transition: 0.3s ease;
+}
+
+.like-icon:hover .core {
+  fill: var(--heart-contour-color, #000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon .core {
+  fill: transparent;
+  transition: fill 0.3s 0.03s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--heart-contour-color, #000);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body,
+.like-icon:active .core {
+  fill: var(--heart-color, #FF0000);
+  transition: fill 0.3s 0.05s linear;
+}
+
+/* Click на сердечко */
+
+.like-icon {
+  transform-origin: center;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-color, #FF0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-color, #FF0000);
+  transition: fill 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-color, #FF0000);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked {
+  animation: heartbeat 0.3s 0.1s ease-in 1 alternate;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in 1 alternate;
+}
+
+@keyframes arrow-movement {
+  from {
+    transform: translateX(0px);
+  }
+
+  to {
+    transform: translateX(4px);
+  }
+}
+
+@keyframes text-underline-disabled {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes heartbeat {
+    
+  from {
+      scale: 1;
+  }
+
+  to {
+      scale: 1.5;
+  }
+}
+
+@keyframes sparks {
+
+  from {
+      opacity: 0;
+  }
+
+  50% {
+      opacity: 1;
+  }
+
+  to {
+      opacity: 1;
+  }
+}
