--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,8 @@
   min-block-size: 100dvb;
 }
 
+/* Header */
+
 .header {
   display: flex;
   flex-direction: column;
@@ -55,6 +57,7 @@
 .theme-menu__list {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 14px;
   margin-block-start: 25px;
 }
@@ -79,6 +82,18 @@
   opacity: 0.6;
   inset-inline-start: -15px;
 }
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+  transition: 0.5s;
+}
+
+.theme-menu__button:focus-visible {
+  border-block-end: 2px solid currentColor;
+}
+
+/* main */
 
 .main {
   display: flex;
@@ -112,9 +127,18 @@
   font-family: var(--accent-font, sans-serif);
   font-weight: 400;
   font-size: 14px;
+  text-shadow: 0 0 1px var(--background-color, #000);
   inset-block-start: 25px;
   inset-inline-end: 25px;
   mix-blend-mode: hard-light;
+}
+
+@supports((text-stroke: 1px (--background-color, #000)) or (-webkit-text-stroke: 1px (--background-color, #000))) {
+  .image_container::after {
+      text-shadow: none;
+      -webkit-text-stroke: 1px (--background-color, #000);
+      text-stroke: 1px (--background-color, #000);
+  }
 }
 
 .card:nth-child(1) .image_container:after,
@@ -150,7 +174,6 @@
   object-fit: cover;
   inline-size: 100%;
   block-size: 100%;
-  aspect-ratio: 1/1;
 }
 
 .card__text {
@@ -163,44 +186,84 @@
   line-height: 21px;
 }
 
+/* Кнопки */
+
+.button {
+  position: relative;
+  cursor: pointer;
+}
+
 .card__buttons {
   display: flex;
   justify-content: flex-end;
-  gap: 12px;
+  align-items: center;
+  gap: 4px;
   margin-top: 25px;
   margin-inline-end: 25px;
   margin-block-end: 25px;
 }
 
-.card__icon-button {
-  border: none;
-  background: none;
-  block-size: 39px;
-  inline-size: 36px;
-}
-
-.like-icon {
-  width: 39px;
-  height: 36px;
-}
-
-.sparks {
-  opacity: 0;
-}
-
 .card__like-button {
   border: 2px solid var(--accent-color, #000);
   background: none;
-  cursor: pointer;
   block-size: 38px;
   inline-size: 130px;
 }
 
+.card__like-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--accent-color);
+}
+
 .button__text {
+  color: var(--button-text-color, #fff);
   font-family: var(--accent-font, sans-serif);
   font-weight: 400;
   font-size: 14px;
+  mix-blend-mode: difference;
 }
+
+/* Сердечко */
+
+.like-icon {
+  block-size: 36px;
+}
+
+.like-icon .contour {
+  fill: var(--heart-contour-color, #000);
+}
+
+.like-icon .main-body,
+.like-icon .core {
+  fill: none;
+}
+
+.like-icon .sparks {
+  opacity: 0;
+}
+
+.card__icon-button {
+  display: flex;
+  justify-content: center;
+  border: none;
+  background: none;
+  cursor: pointer;
+  block-size: 36px;
+  inline-size: 36px;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: 2px solid var(--accent-color, #000);
+}
+
+/* footer */
 
 .footer {
   display: flex;
@@ -224,12 +287,89 @@
 }
 
 .footer__image {
+  color: var(--button-text-color, #fff);
+  fill: currentColor;
+  stroke: currentColor;
   inline-size: 21px;
   block-size: auto;
+  mix-blend-mode: difference;
 }
 
-.button__text {
-  font-family: var(--accent-font, sans-serif);
-  font-weight: 400;
-  font-size: 14px;
+/* dialog */
+
+.dialog[open] {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid currentColor;
+  color: var(--accent-color, #000);
+  background-color: var(--background-color, #fff);
+  max-block-size: 193px;
+  max-inline-size: 357px;
+}
+
+.dialog__header {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 20px;
+  max-inline-size: 293px;
+}
+
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.3);
+  backdrop-filter: blur(7px);
+}
+
+.dialog__image {
+  width: 39px;
+  height: 39px;
+  fill: var(--accent-color, #000);
+  stroke: var(--accent-color, #000);
+}
+
+.dialog__button {
+  color: var(--accent-color, #000);
+  border: 2px solid var(--accent-color, #000);
+  background: transparent;
+  max-block-size: 38px;
+  max-inline-size: 293px;
+  inline-size: 100%;
+  mix-blend-mode: normal;
+}
+
+/* Эффекты карточек */
+
+.card:nth-child(2) .image_container .card__image {
+  filter: brightness(200%);
+}
+
+.card:nth-child(3) .image_container .card__image {
+  filter: contrast(20%);
+}
+
+.card:nth-child(4) .image_container .card__image {
+  filter: blur(5px);
+}
+
+.card:nth-child(5) .image_container .card__image {
+  filter: opacity(0.8);
+}
+
+.card:nth-child(6) .image_container .card__image {
+  filter: grayscale(0.8);
+}
+
+.card:nth-child(7) .image_container .card__image {
+  filter: saturate(158%);
+}
+
+.card:nth-child(8) .image_container .card__image {
+  filter: sepia(80%);
+}
+
+.card:nth-child(9) .image_container .card__image {
+  filter: sepia(70%) saturate(158%);
 }
