--- a/styles/themes.css
+++ b/styles/themes.css
@@ -8,6 +8,9 @@
 :root.theme-dark {
   --font-color: #00CC14;
   --accent-color: #00CC14;
+  --button-text-color: #00CC14;
+  --heart-contour-color: #00CC14;
+  --heart-color: #FF0000;
   --background-color: #000;
   --background-image: repeating-linear-gradient(to right, #000 0 2px, transparent 2px 4px),
   repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
@@ -17,6 +20,9 @@
 :root.theme-light {
   --font-color: #000;
   --accent-color: #000;
+  --button-text-color: #fff;
+  --heart-contour-color: #000;
+  --heart-color: #FF0000;
   --background-color: #fff;
   --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
   repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
@@ -27,6 +33,9 @@
   :root {
     --font-color: #000;
     --accent-color: #000;
+    --button-text-color: #fff;
+    --heart-contour-color: #000;
+    --heart-color: #FF0000;
     --background-color: #fff;
     --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
     repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
