--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,6 +9,9 @@
 
   --font-color: #000;
   --accent-color: #000;
+  --button-text-color: #fff;
+  --heart-contour-color: #000;
+  --heart-color: #FF0000;
   --background-color: #fff;
   --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
   repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
