--- a/styles/themes.css
+++ b/styles/themes.css
@@ -7,38 +7,44 @@
 
 :root.theme-dark {
   --font-color: #00CC14;
+  --font-weight: 465;   
   --accent-color: #00CC14;
+  --font-weight-accent: 785;  
   --button-text-color: #00CC14;
   --heart-contour-color: #00CC14;
   --heart-color: #FF0000;
   --background-color: #000;
   --background-image: repeating-linear-gradient(to right, #000 0 2px, transparent 2px 4px),
-  repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
-  repeating-linear-gradient(to bottom, #007f0c 0.01%, #004306 100%);
+                      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+                      repeating-linear-gradient(to bottom, #007f0c 0.01%, #004306 100%);                  
 }
 
 :root.theme-light {
   --font-color: #000;
+  --font-weight: 400;
   --accent-color: #000;
+  --font-weight-accent: 700;  
   --button-text-color: #fff;
   --heart-contour-color: #000;
   --heart-color: #FF0000;
   --background-color: #fff;
   --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
-  repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-  repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+                      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+                      repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);                    
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     --font-color: #000;
+    --font-weight: 400;
     --accent-color: #000;
+    --font-weight-accent: 700;  
     --button-text-color: #fff;
     --heart-contour-color: #000;
     --heart-color: #FF0000;
     --background-color: #fff;
     --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
-    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-    repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+                        repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+                        repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);                 
   }
 }
