--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
   background-attachment: fixed;
   font-variation-settings: 'wght' var(--font-weight, 400);
   min-inline-size: 320px;
-  max-inline-size: 696px;
+  max-inline-size: 700px;
   min-block-size: 100dvb;
 }
 
@@ -34,16 +34,16 @@
 .header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin-block-start: 102px;
+  margin-block-start: 100px;
   border: 2px solid currentColor;
   font-family: var(--accent-font, sans-serif);
   background-color: var(--background-color, #fff);
-  min-block-size: 364px;
+  min-block-size: 368px;
 }
 
 .header__logo {
+  margin-block-start: clamp(120px, -0.7135rem + 21.1806vw, 136px);
   font-size: var(--logo-size, 65px);
   text-transform: uppercase;
 }
@@ -54,12 +54,16 @@
   text-transform: uppercase;
 }
 
+.header__theme-menu {
+  margin-inline-start: 18px;
+  margin-block-start: 21px;
+}
+
 .theme-menu__list {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 14px;
-  margin-block-start: 25px;
+  gap: 10px;
 }
 
 .theme-menu__button {
@@ -72,6 +76,8 @@
 
 .theme-menu__item:has(.theme-menu__button:disabled) {
   position: relative;
+  display: flex;
+  align-items: center;
   opacity: 0.6;
   pointer-events: none;
 }
@@ -80,6 +86,7 @@
   content: "▶";
   position: absolute;
   opacity: 0.6;
+  font-size: 15px;
   inset-inline-start: -15px;
 }
 
@@ -99,8 +106,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 52px;
-  padding-block-start: 102px;
+  gap: 50px;
+  margin-block-start: 100px;
 }
 
 .card {
@@ -110,14 +117,13 @@
 }
 
 .card__title {
-  padding: 3px 24px;
-  font-weight: var(--font-weight-accent, 700);
+  padding: 5px 10px;
+  font-size: 18px;
+  font-variation-settings: 'wght' var(--font-weight-accent, 700);
 }
 
 .image_container {
   position: relative;
-  border-block-start: 2px solid var(--accent-color, #000);
-  border-block-end: 2px solid var(--accent-color, #000);
 }
 
 .image_container::after {
@@ -139,6 +145,24 @@
       -webkit-text-stroke: 1px (--background-color, #000);
       text-stroke: 1px (--background-color, #000);
   }
+}
+
+.card__image {
+  border-block-start: 2px solid var(--accent-color, #000);
+  border-block-end: 2px solid var(--accent-color, #000);
+  object-fit: cover;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding: 21px 25px;
+  padding-block-end: 0;
+  font-family: Inter;
+  line-height: 21px;
 }
 
 .card:nth-child(1) .image_container:after,
@@ -170,22 +194,6 @@
   content: "<experience>";
 }
 
-.card__image {
-  object-fit: cover;
-  inline-size: 100%;
-  block-size: 100%;
-}
-
-.card__text {
-  display: flex;
-  flex-direction: column;
-  gap: 27px;
-  margin-block-start: clamp(25px, 1.4198rem + 0.6154vw, 27px);
-  padding: 25px;
-  font-family: Inter;
-  line-height: 21px;
-}
-
 /* Кнопки */
 
 .button {
@@ -196,10 +204,9 @@
 .card__buttons {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
   gap: 4px;
-  margin-top: 25px;
   margin-inline-end: 25px;
+  margin-block-start: 25px;
   margin-block-end: 25px;
 }
 
@@ -268,7 +275,7 @@
 .footer {
   display: flex;
   justify-content: center;
-  margin-block-start: 52px;
+  margin-block-start: 50px;
   background: none;
   min-block-size: 208px;
 }
@@ -282,8 +289,8 @@
   color: var(--accent-color, #000);
   background: none;
   background-color: var(--background-color, #fff);
-  inline-size: 335px;
-  block-size: 51px;
+  inline-size: 339px;
+  block-size: 55px;
 }
 
 .footer__image {
