--- a/styles/style.css
+++ b/styles/style.css
@@ -250,7 +250,7 @@
   justify-content: flex-end;
   margin-inline-end: 25px;
   margin-block-start: 25px;
-  margin-block-end: 23px;
+  margin-block-end: 25px;
 }
 
 .card__like-button {
@@ -298,7 +298,7 @@
   transition: outline 0.3s ease;
   cursor: pointer;
   inline-size: 51px;
-  block-size: auto;
+  block-size: 34px;
   appearance: none;
 }
 
