fix: Исправление footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -317,6 +317,7 @@
   justify-content: center;
   margin-block-start: 50px;
   background: transparent;
+  padding-bottom: 105px;
 }
 
 .footer__button {
